[6900 XT][VA-API][AV1 HW decode] Flashing/glitching output when decoding some AV1 YouTube videos
System information
- OS: Arch Linux
- GPU: AMD/ATI Navi 21 Radeon RX 6900 XT
- Kernel version: 5.18.12-arch1-1
- Mesa version: OpenGL version string: 4.6 (Compatibility Profile) Mesa 22.1.3
- Xserver version: X.Org X Server 1.21.1.4, X Protocol Version 11, Revision 0
- Desktop manager and compositor: SDDM + KDE Plasma
Describe the issue
Some YouTube videos that have an AV1 version available do not decode properly on my system. An example would be this video at 144p. 240p and 360p work fine. This video has the glitchy visuals at both available resolutions. Even when downloading the video manually and running it in mpv, the exact same issue occurs. I should add that AV1 HW decoding works fine in general, e.g. when watching videos I've encoded myself.
Here's a recording of what the issue looks like on my end (warning: quick flashes):
I have tried using mesa compiled from git main
and that didn't fix the issue. I have also tried installing 'git-compiled' versions of dav1d, which also didn't help.